Perspective.jpg fix on mobile

--- a/assets/css/common.css
+++ b/assets/css/common.css
@@ -2275,7 +2275,7 @@ header .global-nav__sns a:last-child {
 @media screen and (max-width:420px) {
   .big-image {
     margin-top: 7.2rem;
-    height: 50rem
+    height: 30rem
   }
 }
 
